[package]
name = "etsi_gs_qkd_014_testsuite"
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
base64 = "0.21.0"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
test-case = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
