[package]
name = "etsi_gs_qkd_014_testsuite"
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[dev-dependencies]
base64 = "0.21.0"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
